welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		return Color.green;
                             ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if (getCouleurSol==Color.green) 
        ^