welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	
	if (!estFaceMur) {
		avance() } ;
	
	if (getCouleurSol==Color.green) 
	

	
		return Color.green;

}

